--- a/cloud-client-dev.properties
+++ b/cloud-client-dev.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+my.msg=client server is working
